--- a/spec/pom.xml
+++ b/spec/pom.xml
@@ -18,18 +18,33 @@
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.eclipse.ee4j</groupId>
         <artifactId>project</artifactId>
         <version>1.0.6</version>
         <relativePath/>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
+
     <groupId>jakarta.xml.bind</groupId>
     <artifactId>xml-binding-spec</artifactId>
+    <version>4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <version>4.0</version>
+
     <name>Jakarta XML Binding Specification</name>
+
+    <scm>
+        <connection>scm:git:git://github.com/eclipse-ee4j/jaxb-api.git</connection>
+        <developerConnection>scm:git:git@github.com:eclipse-ee4j/jaxb-api.git</developerConnection>
+        <url>https://github.com/eclipse-ee4j/jaxb-api.git</url>
+        <tag>HEAD</tag>
+    </scm>
+    <distributionManagement>
+        <site>
+            <url>scm:git:git@github.com:eclipse-ee4j/jaxb-api.git</url>
+        </site>
+    </distributionManagement>
 
     <properties>
         <site.output.dir>${project.build.directory}/staging</site.output.dir>
@@ -43,34 +58,25 @@
         <revisiondate>${maven.build.timestamp}</revisiondate>
     </properties>
 
-    <scm>
-        <connection>scm:git:git://github.com/eclipse-ee4j/jaxb-api.git</connection>
-        <developerConnection>scm:git:git@github.com:eclipse-ee4j/jaxb-api.git</developerConnection>
-        <url>https://github.com/eclipse-ee4j/jaxb-api.git</url>
-        <tag>HEAD</tag>
-    </scm>
-
-    <distributionManagement>
-        <site>
-            <url>scm:git:git@github.com:eclipse-ee4j/jaxb-api.git</url>
-        </site>
-    </distributionManagement>
-
     <build>
         <defaultGoal>package</defaultGoal>
         <plugins>
+            <!-- Sets minimal Maven version -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <version>3.4.0</version>
                 <executions>
                     <execution>
-                        <id>enforce-versions</id>
+                        <id>enforce-env</id>
                         <goals>
                             <goal>enforce</goal>
                         </goals>
                         <configuration>
                             <rules>
+                                <requireMavenVersion>
+                                    <version>3.6.0</version>
+                                </requireMavenVersion>
                                 <requireJavaVersion>
                                     <version>[11,)</version>
                                     <message>You need Java SE 11 or newer</message>
@@ -146,12 +152,14 @@
                 <configuration>
                     <sourceDocumentName>${project.artifactId}.adoc</sourceDocumentName>
                     <attributes>
-                        <revnumber>${project.version}</revnumber>
+                        <sourceDirectory>${basedir}/src/main/asciidoc</sourceDirectory>
+                        <imagesdir>images</imagesdir>
+                        <source-highlighter>coderay</source-highlighter>
                         <revremark>${status}</revremark>
                         <revdate>${revisiondate}</revdate>
+                        <revnumber>${project.version}</revnumber>
                     </attributes>
                 </configuration>
-
             </plugin>
             <!--
                 This is the rule that builds the zip file for download.
