Processing feedback; adding JDK 11 as requirement to build specs

--- a/spec/pom.xml
+++ b/spec/pom.xml
@@ -78,6 +78,9 @@
                                 <requireMavenVersion>
                                     <version>3.6.0</version>
                                 </requireMavenVersion>
+                                <requireJavaVersion>
+                                     <version>[11,)</version>
+                                </requireJavaVersion>
                             </rules>
                         </configuration>
                     </execution>
