--- a/api/pom.xml
+++ b/api/pom.xml
@@ -84,7 +84,7 @@
                         <bottom>
                         <![CDATA[
 Comments to : <a href="mailto:${release.spec.feedback}">${release.spec.feedback}</a>.<br>
-Copyright &#169; 2019, 2021 Eclipse Foundation. All rights reserved.<br>
+Copyright &#169; 2019, ${current.year} Eclipse Foundation. All rights reserved.<br>
 Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">license terms</a>.]]>
                         </bottom>
                         <detectJavaApiLink>false</detectJavaApiLink>
@@ -125,6 +125,18 @@ Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <executions>
+                    <execution>
+                        <id>currentyear-property</id>
+                        <goals>
+                            <goal>timestamp-property</goal>
+                        </goals>
+                        <phase>validate</phase>
+                        <configuration>
+                            <name>current.year</name>
+                            <locale>en,US</locale>
+                            <pattern>yyyy</pattern>
+                        </configuration>
+                    </execution>
                     <execution>
                         <id>add-legal-resource</id>
                         <phase>generate-resources</phase>
@@ -192,25 +204,32 @@ Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">
                         <goals>
                             <goal>manifest</goal>
                         </goals>
-                    <configuration>
-                        <instructions>
-                            <Bundle-Version>${project.version}</Bundle-Version>  <!-- 2.2.99.bnull -->
-                            <Bundle-Description>
-                                Jakarta XML Binding API ${spec.version} Design Specification
-                            </Bundle-Description>
-                            <Extension-Name>${extension.name}</Extension-Name>
-                            <Implementation-Version>${project.version}</Implementation-Version>
-                            <Specification-Version>${spec.version}</Specification-Version>
-                            <Import-Package>
-                                !org.glassfish.hk2.osgiresourcelocator,
-                                *
-                            </Import-Package>
-                            <Bundle-SymbolicName>${extension.name}-api</Bundle-SymbolicName>
-                            <DynamicImport-Package>org.glassfish.hk2.osgiresourcelocator</DynamicImport-Package>
-                            <Specification-Vendor>${vendor.name}</Specification-Vendor>
-                            <Implementation-Build-Id>${buildNumber}</Implementation-Build-Id>
-                        </instructions>
-                    </configuration>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <addDefaultEntries>false</addDefaultEntries>
+                                </manifest>
+                            </archive>
+                            <niceManifest>true</niceManifest>
+                            <instructions>
+                                <Bundle-Version>${project.version}</Bundle-Version>  <!-- 2.2.99.bnull -->
+                                <Bundle-Description>
+                                    Jakarta XML Binding API ${spec.version} Design Specification
+                                </Bundle-Description>
+                                <Extension-Name>${extension.name}</Extension-Name>
+                                <Implementation-Version>${project.version}</Implementation-Version>
+                                <Specification-Version>${spec.version}</Specification-Version>
+                                <Import-Package>
+                                    !org.glassfish.hk2.osgiresourcelocator,
+                                    *
+                                </Import-Package>
+                                <Bundle-SymbolicName>${extension.name}-api</Bundle-SymbolicName>
+                                <DynamicImport-Package>org.glassfish.hk2.osgiresourcelocator</DynamicImport-Package>
+                                <Specification-Vendor>${vendor.name}</Specification-Vendor>
+                                <Implementation-Build-Id>${buildNumber}</Implementation-Build-Id>
+                                <_noextraheaders>true</_noextraheaders>
+                            </instructions>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -233,13 +252,6 @@ Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">
                     <excludeFilterFile>${spotbugs.exclude}</excludeFilterFile>
                     <failThreshold>High</failThreshold>
                 </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
