add instructions for osgi mediator
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -228,6 +228,16 @@ Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">
                                 <Specification-Vendor>${vendor.name}</Specification-Vendor>
                                 <Implementation-Build-Id>${buildNumber}</Implementation-Build-Id>
                                 <_noextraheaders>true</_noextraheaders>
+                                <!-- optional to allow usage with hk2 resource locator as a fallback -->
+                                <Require-Capability><![CDATA[
+                                    osgi.extender;filter:="(&(osgi.extender=osgi.serviceloader.processor)
+                                      (version>=1.0.0)(!(version>=2.0.0)))";resolution:=optional,
+                                    osgi.serviceloader;
+                                      filter:="(osgi.serviceloader=jakarta.xml.bind.JAXBContextFactory)";
+                                        osgi.serviceloader="jakarta.xml.bind.JAXBContextFactory";
+                                        cardinality:=multiple;resolution:=optional
+                                  ]]>
+                                </Require-Capability>
                             </instructions>
                         </configuration>
                     </execution>
