--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2021 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2024 Contributors to the Eclipse Foundation
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License v. 2.0 which is available at
@@ -23,13 +23,13 @@ jobs:
 
     strategy:
       matrix:
-        java_version: [ 11, 17 ]
+        java_version: [ 11, 17, 21 ]
 
     steps:
     - name: Checkout for build
-      uses: actions/checkout@v2.3.4
+      uses: actions/checkout@v4
     - name: Set up JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
         distribution: 'zulu'
         java-version: ${{ matrix.java_version }}
