--- a/spec/pom.xml
+++ b/spec/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2017, 2023 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2017, 2024 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -35,14 +35,14 @@
     <name>Jakarta XML Binding Specification</name>
 
     <scm>
-        <connection>scm:git:git://github.com/eclipse-ee4j/jaxb-api.git</connection>
-        <developerConnection>scm:git:git@github.com:eclipse-ee4j/jaxb-api.git</developerConnection>
-        <url>https://github.com/eclipse-ee4j/jaxb-api.git</url>
+        <connection>scm:git:git://github.com/jakartaee/jaxb-api</connection>
+        <developerConnection>scm:git:git@github.com:jakartaee/jaxb-api</developerConnection>
+        <url>https://github.com/jakartaee/jaxb-api</url>
         <tag>HEAD</tag>
     </scm>
     <distributionManagement>
         <site>
-            <url>scm:git:git@github.com:eclipse-ee4j/jaxb-api.git</url>
+            <url>scm:git:git@github.com:jakartaee/jaxb-api</url>
         </site>
     </distributionManagement>
 
