--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
     <packaging>pom</packaging>
     <name>Jakarta XML Binding</name>
     <description>Jakarta XML Binding API</description>
-    <url>https://github.com/eclipse-ee4j/jaxb-api</url>
+    <url>https://github.com/jakartaee/jaxb-api</url>
 
     <scm>
-        <connection>scm:git:git://github.com/jakartaee/jaxb-api</connection>
-        <developerConnection>scm:git:git@github.com:jakartaee/jaxb-api</developerConnection>
-        <url>https://github.com/jakartaee/jaxb-api</url>
+        <connection>scm:git:git://github.com/jakartaee/jaxb-api.git</connection>
+        <developerConnection>scm:git:git@github.com:jakartaee/jaxb-api.git</developerConnection>
+        <url>https://github.com/jakartaee/jaxb-api.git</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -55,7 +55,7 @@
 
     <issueManagement>
         <system>github</system>
-        <url>https://github.com/eclipse-ee4j/jaxb-api/issues</url>
+        <url>https://github.com/jakartaee/jaxb-api/issues</url>
     </issueManagement>
 
     <mailingLists>
